Fix crash (bug 189514) by refixing bug 187297 correctly:  make nsXPInstallManager's QueryInterface method succeed for nsPICertNotification.  b=189514  r=timeless  sr=dveditz